# arma_paramagnet

./: CMakeLists.txt  main.cpp
